--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "npm run build:main && npm run build:bundle",
     "build:bundle": "npm run copy-gen-folders && npm run package && npm run build-binary",
-    "package": "browserify ./dist/main/src/launcher/Main.js -x electron --ignore-missing --node --outfile ./dist/electronLauncher.bundle.js",
+    "package": "webpack",
     "copy-gen-folders": "copyfiles src/launcher/gen/* dist/main",
     "build:main": "tsc -p tsconfig.json",
     "test": "npm run unit",
