AAP-21559: add top-level prebuild script to marshal generated files before ts build

--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -10,11 +10,10 @@
   },
   "sideEffects": false,
   "scripts": {
-    "prebuild": "npm run lint && trash dist/main && trash dist/lib && npm run copy-assets && npm run rename-lib",
+    "prebuild": "npm run copy-assets && npm run rename-lib",
     "copy-assets": "copyfiles -f ../../../dsl/gen/cli/build/libs/cli-*-all.jar dist/lib",
     "rename-lib": "renamer --find cli-.*-all.jar --regex --replace plexusgen.jar dist/lib/* && trash dist/lib/cli-.*-all.jar",
     "build": "npm run build:main",
-    "build:bundle": "npm run copy-assets && npm run rename-lib",
     "postinstall": "node ./install.js",
     "postbuild": "npm run test",
     "build:main": "tsc -p tsconfig.json",
