--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "preinstall": "node ./scripts/replace-lock-registry.js && node ./scripts/replace-auth-vars.js --install",
     "postinstall": "node ./scripts/replace-lock-registry.js --backward && link-parent-bin",
     "build": "npm run build-ts -- --force && npm run build-bundles",
+    "prebuild-ts": "lerna run prebuild --stream",
     "build-ts": "tsc -b packages",
     "build-bundles": "lerna run build:bundle --stream",
     "watch": "tsc -b -w packages --preserveWatchOutput",
