--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -7,6 +7,7 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
+    "prebuild": "npm run gen-echo-protocol",
     "build": "npm run build:main && npm run build:bundle",
     "build:main": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
