AAP-21559: convert e2e from browserify to webpack
part 1

--- a/web/package.json
+++ b/web/package.json
@@ -43,6 +43,7 @@
     "@angular/cli": "^13.2.3",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@types/chai": "^4.0.2",
     "@types/core-js": "^0.9.43",
     "@types/fs-extra": "5.0.1",
@@ -72,7 +73,7 @@
     "eslint": "^8.2.0",
     "espree": "^3.4.3",
     "find-port": "^2.0.1",
-    "glob": "^7.1.2",
+    "glob": "^7.2.0",
     "http-server": "^0.11.1",
     "if-env": "1.0.0",
     "is-electron-renderer": "^2.0.1",
@@ -83,11 +84,15 @@
     "jest-jasmine2": "^27.5.1",
     "jest-preset-angular": "^11.1.0",
     "karma": "~6.3.15",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^5.0.0",
     "lerna": "^4.0.0",
     "link-parent-bin": "^2.0.0",
     "minimist": "^1.2.0",
