AAP-21559: convert e2e from browserify to webpack
part 2

--- a/web/package.json
+++ b/web/package.json
@@ -74,6 +74,7 @@
     "espree": "^3.4.3",
     "find-port": "^2.0.1",
     "glob": "^7.2.0",
+    "glob-to-regexp": "^0.4.1",
     "http-server": "^0.11.1",
     "if-env": "1.0.0",
     "is-electron-renderer": "^2.0.1",
