--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -19,18 +19,18 @@
     "gen-echo-ts": "pbts --force-long -o src/echo/gen/plexus-messages.d.ts src/echo/gen/plexus-messages.js",
     "gen-echo-protocol": "npm run gen-echo-js && npm run gen-echo-ts",
     "copy-assets": "copyfiles src/echo/gen/* dist/main && copyfiles src/views/* dist/main",
-    "build-host-proxy": "node scripts/browserify-all.js --standalone proxyHost --inputGlob dist/main/tests/common/TestCrossDomainHost.js --outputFile dist/main/tests/web/CrossDomainHost.bundle.js",
-    "prepare-native-e2e-debug-tests": "node scripts/browserify-all.js --inputGlob dist/main/tests/native/*Connect*spec.js --outputFile dist/main/tests/native/RendererProcess.bundle.js",
+    "build-host-proxy": "node scripts/browserify-all.js --standalone proxyHost --inputGlob dist/main/tests/common/TestCrossDomainHost.js --outputFile web/CrossDomainHost.bundle.js",
+    "prepare-native-e2e-debug-tests": "node scripts/browserify-all.js --inputGlob dist/main/tests/native/*Connect*spec.js --outputFile native/RendererProcess.bundle.js",
     "e2e-web-electron": "node scripts/web-e2e-tests-launcher.js --file ./dist/main/tests/web/RendererProcess.bundle.js",
-    "pree2e-web-electron": "node scripts/browserify-all.js --brokerCoverage true --inputGlob dist/main/tests/web/*spec.js --outputFile dist/main/tests/web/RendererProcess.bundle.js",
+    "pree2e-web-electron": "node scripts/browserify-all.js --brokerCoverage true --inputGlob dist/main/tests/web/*spec.js --outputFile web/RendererProcess.bundle.js",
     "e2e-web-ie": "node scripts/web-e2e-tests-launcher.js --browser ie",
     "e2e-web-chrome": "node scripts/web-e2e-tests-launcher.js --browser chrome",
     "web-broker-benchmarks": "node scripts/web-e2e-tests-launcher.js --file ./dist/main/tests/web/benchmarks/RendererProcessBenchmarks.bundle.js",
-    "preweb-broker-benchmarks": "node scripts/browserify-all.js --inputGlob dist/main/tests/web/benchmarks/*spec.js --outputFile dist/main/tests/web/benchmarks/RendererProcessBenchmarks.bundle.js",
+    "preweb-broker-benchmarks": "node scripts/browserify-all.js --inputGlob dist/main/tests/web/benchmarks/*spec.js --outputFile web/benchmarks/RendererProcessBenchmarks.bundle.js",
     "native-broker-benchmarks": "node scripts/native-e2e-tests-launcher.js --file ./dist/main/tests/native/benchmarks/RendererProcessBenchmarks.bundle.js",
-    "prenative-broker-benchmarks": "node scripts/browserify-all.js --inputGlob dist/main/tests/native/benchmarks/*spec.js --outputFile dist/main/tests/native/benchmarks/RendererProcessBenchmarks.bundle.js",
+    "prenative-broker-benchmarks": "node scripts/browserify-all.js --inputGlob dist/main/tests/native/benchmarks/*spec.js --outputFile native/benchmarks/RendererProcessBenchmarks.bundle.js",
     "e2e-native": "node scripts/native-e2e-tests-launcher.js --file ./dist/main/tests/native/RendererProcess.bundle.js",
-    "pree2e-native": "node scripts/browserify-all.js --clientCoverage true --inputGlob dist/main/tests/native/*spec.js --outputFile dist/main/tests/native/RendererProcess.bundle.js",
+    "pree2e-native": "node scripts/browserify-all.js --clientCoverage true --inputGlob dist/main/tests/native/*spec.js --outputFile native/RendererProcess.bundle.js",
     "e2e-native-debug": "npm run build && npm run prepare-native-e2e-debug-tests && npm run e2e-native-debug-run",
     "e2e-native-debug-run": "node scripts/native-e2e-tests-launcher.js --printBrokerStdout true --debug true --file ./dist/main/tests/native/RendererProcess.bundle.js"
   },
