AAP-21559: add pre-build clean step to bin out of date dist folders

--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "preinstall": "node ./scripts/replace-lock-registry.js && node ./scripts/replace-auth-vars.js --install",
     "postinstall": "node ./scripts/replace-lock-registry.js --backward && link-parent-bin",
+    "prebuild": "lerna exec -- shx rm -rf dist",
     "build": "npm run build-ts -- --force && npm run build-bundles",
     "prebuild-ts": "lerna run prebuild --stream",
     "build-ts": "tsc -b packages",
