--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -16,9 +16,8 @@
     "build": "npm run build:main",
     "postinstall": "node ./install.js",
     "postbuild": "npm run test",
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "build:watch": "tsc -w -p tsconfig.json",
-    "lint": "tslint src/**/*.ts",
     "unit": "jest --coverage",
     "pretest": "trash dist/gen",
     "test": "if-env PLEXUS_CLI_TESTS_ENABLED=true && npm run cli-test || echo 'CLI tests disabled'",
