--- a/web/packages/common/package.json
+++ b/web/packages/common/package.json
@@ -8,9 +8,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "npm run build:main",
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "build:watch": "tsc -w -p tsconfig.json",
-    "lint": "tslint src/**/*.ts",
     "unit": "jest --coverage",
     "test": "npm run unit"
   },
