--- a/web/packages/websocket-transport/package.json
+++ b/web/packages/websocket-transport/package.json
@@ -7,8 +7,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "npm run build:main",
-    "build:main": "tsc -p tsconfig.json",
-    "lint": "tslint src/**/*.ts",
+    "build:main": "tsc",
     "unit": "jest --coverage",
     "test": "npm run unit"
   },
