--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "prepublish-all": "node ./scripts/replace-auth-vars.js --publish && lerna exec -- cross-var shx cp $LERNA_ROOT_PATH/.npmrc .npmrc",
     "publish-all": "lerna publish from-package --loglevel=verbose",
     "postpublish-all": "shx rm -rf .npmrc && lerna exec -- shx rm -rf .npmrc",
-    "lint": "lerna run --stream lint",
+    "lint": "eslint \"packages/**/*.ts\"",
+    "lint:packages": "lerna run --stream lint",
     "test": "lerna run --stream test",
     "verify": "npm run lint && npm run test",
     "e2e-native": "cd ./packages/e2e && npm run e2e-native",
@@ -56,8 +57,8 @@
     "@types/node": "^12.11.1",
     "@types/rx": "^4.1.1",
     "@types/superagent": "^3.5.6",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "babel-register": "^6.23.0",
     "chai": "^4.1.0",
     "chokidar": "^1.7.0",
@@ -68,7 +69,14 @@
     "electron-log": "^2.2.9",
     "electron-mocha": "^4.0.2",
     "electron-packager": "^13.1.1",
-    "eslint": "^8.2.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsdoc": "^37.9.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "espree": "^3.4.3",
     "find-port": "^2.0.1",
     "glob": "^7.2.0",
@@ -116,7 +124,6 @@
     "ts-mockito": "2.0.2",
     "ts-node": "~3.2.0",
     "tslib": "^2.3.1",
-    "tslint": "5.8.0",
     "typescript": "~4.4.4",
     "watchify": "^3.9.0",
     "webpack": "^5.68.0",
