--- a/web/packages/client-api/package.json
+++ b/web/packages/client-api/package.json
@@ -8,8 +8,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "npm run build:main",
-    "build:main": "tsc -p tsconfig.json",
-    "lint": "tslint src/**/*.ts"
+    "build:main": "tsc"
   },
   "dependencies": {
     "@plexus-interop/common": "file:../common",
