--- a/web/packages/client/package.json
+++ b/web/packages/client/package.json
@@ -8,9 +8,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "npm run build:main",
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "watch": "tsc -w",
-    "lint": "tslint src/**/*.ts",
     "test": "jest --coverage --forceExit",
     "gen-client-js": "pbjs --force-long -t static-module -r client -w commonjs -o src/gen/internal-client-protocol.js ../../../protocol/Plexus.Interop.proto",
     "gen-client-ts": "pbts --force-long -o src/gen/internal-client-protocol.d.ts src/gen/internal-client-protocol.js",
