--- a/web/packages/common-api-impl/package.json
+++ b/web/packages/common-api-impl/package.json
@@ -7,10 +7,9 @@
   "sideEffects": false,
   "scripts": {
     "build": "npm run build:main && npm run build:bundle",
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "build:bundle": "webpack",
     "build:watch": "tsc -w -p tsconfig.json",
-    "lint": "tslint src/**/*.ts",
     "test": "jest --coverage --passWithNoTests"
   },
   "dependencies": {
