--- a/web/packages/metadata/package.json
+++ b/web/packages/metadata/package.json
@@ -6,9 +6,8 @@
   "version": "0.1.0",
   "scripts": {
     "build": "npm run build:main",
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "build:watch": "tsc -w -p tsconfig.json",
-    "lint": "tslint src/**/*.ts",
     "unit": "jest --coverage",
     "test": "npm run unit"
   },
