--- a/web/packages/remote/package.json
+++ b/web/packages/remote/package.json
@@ -7,9 +7,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "npm run build:main",
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "build:watch": "tsc -w -p tsconfig.json",
-    "lint": "tslint src/**/*.ts",
     "unit": "jest --coverage --passWithNoTests",
     "test": "npm run unit"
   },
