--- a/web/packages/web-example/package.json
+++ b/web/packages/web-example/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build:main": "tsc -p tsconfig.json",
+    "build:main": "tsc",
     "package": "webpack",
     "copy-assets": "copyfiles -f src/greeting/views/* ./dist && copyfiles -f ./dist/greetingServer* ../../../bin/win-x86/samples/greeting/apps/WebGreetingServer",
     "copy-gen-folders": "copyfiles src/greeting/server/gen/* dist/main",
