AAP-21559: manually fix lint errors (part 3)

--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -46,6 +46,8 @@
     "@plexus-interop/transport-common": "file:../transport-common",
     "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "@types/long": "^4.0.0",
+    "chai": "^4.1.0",
+    "core-js": "^2.5.3",
     "is-electron-renderer": "^2.0.1",
     "long": "^4.0.0",
     "protobufjs": "6.11.2"
