--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.0.2",
     "@types/core-js": "^0.9.43",
     "@types/fs-extra": "5.0.1",
@@ -108,6 +109,7 @@
     "nyc": "^11.2.1",
     "optimize-plugin": "^1.1.0",
     "path": "^0.12.7",
+    "prettier": "^2.5.1",
     "protobufjs": "6.11.2",
     "protractor": "~7.0.0",
     "prr": "1.0.1",
