--- a/web/package.json
+++ b/web/package.json
@@ -88,6 +88,7 @@
     "find-port": "^2.0.1",
     "glob": "^7.2.0",
     "glob-to-regexp": "^0.4.1",
+    "html-webpack-plugin": "^5.5.0",
     "http-server": "^0.11.1",
     "husky": "^7.0.4",
     "if-env": "1.0.0",
