--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -21,7 +21,7 @@
     "build-binary": "electron-packager . ElectronAppLauncher --prune true --overwrite true --out=../../../bin/win-x86/samples/greeting/apps && npm run rename-packages && copyfiles ElectronAppLauncher.cmd ../../../bin/win-x86/samples/greeting",
     "prestart": "npm run build",
     "start": "node_modules/.bin/electron .",
-    "rename-packages": "trash ../../../bin/win-x86/samples/greeting/apps/ElectronAppLauncher && renamer --find ElectronAppLauncher-.* --regex --replace ElectronAppLauncher ../../../bin/win-x86/samples/greeting/apps/*"
+    "rename-packages": "trash ../../../bin/win-x86/samples/greeting/apps/ElectronAppLauncher && renamer --find ElectronAppLauncher-.* --replace ElectronAppLauncher ../../../bin/win-x86/samples/greeting/apps/*"
   },
   "keywords": [
     "plexus",
@@ -49,8 +49,15 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
-    "testMatch": ["<rootDir>/tests/**/*.spec.ts"],
-    "collectCoverageFrom": ["src/**/*.ts", "!src/**/*.d.ts"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jasmine.js"
+    ],
+    "testMatch": [
+      "<rootDir>/tests/**/*.spec.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/*.d.ts"
+    ]
   }
 }
