AAP-21559: mitigate npm audit warnings
part 3

--- a/web/package.json
+++ b/web/package.json
@@ -72,10 +72,10 @@
     "copyfiles": "^1.2.0",
     "core-js": "^2.5.3",
     "cross-var": "1.1.0",
-    "electron": "1.8.8",
+    "electron": "^17.1.2",
     "electron-log": "^2.2.9",
-    "electron-mocha": "^4.0.2",
-    "electron-packager": "^13.1.1",
+    "electron-mocha": "^11.0.2",
+    "electron-packager": "^15.4.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -113,7 +113,7 @@
     "link-parent-bin": "^2.0.0",
     "lint-staged": "^12.3.4",
     "minimist": "^1.2.5",
-    "mocha": "^3.5.0",
+    "mocha": "^9.2.1",
     "mock-socket": "^7.0.0",
     "npm-run-all": "4.1.1",
     "nyc": "^15.1.0",
