AAP-21136: add esm & es5 tsc outputs, consildate main/module/es2015 package.json entries

--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,9 @@
     "build": "npm run build-ts -- --force && npm run build-bundles",
     "prebuild-ts": "lerna run prebuild --stream",
     "build-ts": "tsc -b packages",
+    "postbuild-ts": "npm run build-ts:esm && npm run build-ts:esm5",
+    "build-ts:esm": "lerna exec --parallel -- tsc --outDir dist/esm --module esnext --target es6 --importHelpers false",
+    "build-ts:esm5": "lerna exec --parallel -- tsc --outDir dist/esm5 --module esnext",
     "build-bundles": "lerna run build:bundle --stream",
     "watch": "tsc -b -w packages --preserveWatchOutput",
     "prepublish-all": "node ./scripts/replace-auth-vars.js --publish && lerna exec -- cross-var shx cp $LERNA_ROOT_PATH/.npmrc .npmrc",
