--- a/web/packages/common/package.json
+++ b/web/packages/common/package.json
@@ -2,14 +2,16 @@
   "name": "@plexus-interop/common",
   "version": "0.1.0",
   "sideEffects": true,
-  "types": "dist/main/src/index.d.ts",
-  "main": "dist/main/src/index.js",
   "description": "Common functionality for Plexus Interop Web",
   "license": "Apache-2.0",
+  "main": "./dist/main/src/index.js",
+  "module": "./dist/esm5/src/index.js",
+  "es2015": "./dist/esm/src/index.js",
+  "types": "./dist/main/src/index.d.ts",
   "scripts": {
     "build": "npm run build:main",
     "build:main": "tsc",
-    "build:watch": "tsc -w -p tsconfig.json",
+    "build:watch": "tsc -w",
     "unit": "jest --coverage",
     "test": "npm run unit"
   },
