--- a/web/packages/remote/package.json
+++ b/web/packages/remote/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@plexus-interop/remote",
-  "types": "dist/main/src/index.d.ts",
   "description": "Plexus Interop Utilities for accessing remote Services",
   "license": "Apache-2.0",
   "version": "0.1.0",
   "sideEffects": false,
+  "main": "./dist/main/src/index.js",
+  "module": "./dist/esm5/src/index.js",
+  "es2015": "./dist/esm/src/index.js",
+  "types": "./dist/main/src/index.d.ts",
   "scripts": {
     "build": "npm run build:main",
     "build:main": "tsc",
-    "build:watch": "tsc -w -p tsconfig.json",
+    "build:watch": "tsc -w",
     "unit": "jest --coverage --passWithNoTests",
     "test": "npm run unit"
   },
@@ -20,15 +23,21 @@
   "peerDependencies": {
     "rxjs": "^7.5.4"
   },
-  "main": "dist/main/src/index.js",
   "publishConfig": {
     "access": "public"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
-    "testMatch": ["<rootDir>/tests/**/*.spec.ts"],
-    "collectCoverageFrom": ["src/**/*.ts", "!src/**/*.d.ts"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jasmine.js"
+    ],
+    "testMatch": [
+      "<rootDir>/tests/**/*.spec.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/*.d.ts"
+    ]
   }
 }
