AAP-21136: add package export maps

--- a/web/packages/transport-common/package.json
+++ b/web/packages/transport-common/package.json
@@ -8,6 +8,14 @@
   "module": "./dist/esm5/src/index.js",
   "es2015": "./dist/esm/src/index.js",
   "types": "./dist/main/src/index.d.ts",
+  "exports": {
+    ".": {
+      "node": "./dist/main/src/index.js",
+      "es2015": "./dist/esm/src/index.js",
+      "default": "./dist/esm5/src/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "build": "npm run build:main",
     "build:watch": "tsc -w",
