AAP-21136: bump node types to match electron, and commander to match node types
refactor electron.remote to @electron/remote

--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "postinstall": "(is-ci || npm run husky) && link-parent-bin && node ./scripts/replace-lock-registry.js --backward",
     "husky": "cd .. && husky install web/.husky",
     "prebuild": "lerna exec -- shx rm -rf dist",
-    "build": "npm run build-ts -- --force && npm run build-bundles",
+    "build": "npm run build-ts && npm run build-bundles",
     "prebuild-ts": "lerna run prebuild --stream",
     "build-ts": "tsc -b packages",
     "postbuild-ts": "npm run build-ts:esm && npm run build-ts:esm5",
@@ -65,7 +65,7 @@
     "@types/jstorage": "^0.3.30",
     "@types/long": "^4.0.0",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.11.1",
     "@types/rx": "^4.1.1",
     "@types/superagent": "^3.5.6",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -113,6 +113,7 @@
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-webpack": "^5.0.0",
+    "kill-port": "^1.6.1",
     "lerna": "^4.0.0",
     "link-parent-bin": "^2.0.0",
     "lint-staged": "^12.3.4",
