--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "adm-zip": "0.4.11",
-    "commander": "2.15.1",
+    "commander": "^4.0.0",
     "fs-extra": "5.0.0",
     "progress": "2.0.0",
     "protobufjs": "6.11.2",
