AAP-21559: replace trash with del-cli

--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -13,14 +13,14 @@
     "prebuild": "npm run copy-assets && npm run rename-lib",
     "copy-assets": "copyfiles -f ../../../dsl/gen/cli/build/libs/cli-*-all.jar dist/lib",
     "rename-lib": "renamer --find \"/cli-.*-all.jar/i\" --replace plexusgen.jar dist/lib/*",
-    "postrename-lib": "trash dist/lib/cli-*-all.jar",
+    "postrename-lib": "del-cli dist/lib/cli-*-all.jar",
     "build": "npm run build:main",
     "postinstall": "node ./install.js",
     "postbuild": "npm run test",
     "build:main": "tsc",
     "build:watch": "tsc -w",
     "unit": "jest --coverage",
-    "pretest": "trash dist/gen",
+    "pretest": "del-cli dist/gen",
     "test": "if-env PLEXUS_CLI_TESTS_ENABLED=true && npm run cli-test || echo 'CLI tests disabled'",
     "cli-test": "node ./install.js && npm run unit"
   },
