--- a/web/package.json
+++ b/web/package.json
@@ -76,6 +76,7 @@
     "copyfiles": "^1.2.0",
     "core-js": "^2.5.3",
     "cross-var": "1.1.0",
+    "del-cli": "4.0.1",
     "electron": "^17.1.2",
     "electron-log": "^2.2.9",
     "electron-mocha": "^11.0.2",
@@ -133,8 +134,6 @@
     "shx": "^0.3.4",
     "sinon": "^2.4.1",
     "strip-bom": "^3.0.0",
-    "trash": "^4.1.0",
-    "trash-cli": "^5.0.0",
     "tree-kill": "^1.1.0",
     "ts-jest": "^27.1.3",
     "ts-mockito": "2.0.2",
