--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -23,8 +23,8 @@
     "gen-launcher-protocol": "npm run gen-launcher-js && npm run gen-launcher-ts",
     "build-binary": "electron-packager . ElectronAppLauncher --prune true --overwrite true --out=../../../bin/win-x86/samples/greeting/apps && npm run rename-packages && copyfiles ElectronAppLauncher.cmd ../../../bin/win-x86/samples/greeting",
     "prestart": "npm run build",
-    "start": "node_modules/.bin/electron .",
-    "rename-packages": "trash ../../../bin/win-x86/samples/greeting/apps/ElectronAppLauncher && renamer --find \"/ElectronAppLauncher-.*/i\" --replace ElectronAppLauncher ../../../bin/win-x86/samples/greeting/apps/*"
+    "start": "electron .",
+    "rename-packages": "del-cli --force ../../../bin/win-x86/samples/greeting/apps/ElectronAppLauncher && renamer --find \"/ElectronAppLauncher-.*/i\" --replace ElectronAppLauncher ../../../bin/win-x86/samples/greeting/apps/*"
   },
   "keywords": [
     "plexus",
