--- a/web/packages/e2e/tsconfig.json
+++ b/web/packages/e2e/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "dist/main",
     "rootDir": ".",
-    "baseUrl": ".",
-    "esModuleInterop": true
+    "baseUrl": "."
   },
   "references": [
     { "path": "../broker" },
