AAP-21559: bump dev dependencies, scope esm generation to public packages

--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -17,10 +17,7 @@
     "gen-echo-js": "pbjs --force-long -t static-module -r echo-client -w commonjs -o src/echo/gen/plexus-messages.js src/echo/metadata/messages.proto",
     "gen-echo-ts": "pbts --force-long -o src/echo/gen/plexus-messages.d.ts src/echo/gen/plexus-messages.js",
     "gen-echo-protocol": "npm run gen-echo-js && npm run gen-echo-ts",
-    "copy-assets": "run-s copy-assets:*",
-    "copy-assets:cjs": "copyfiles src/echo/gen/* dist/main && copyfiles src/views/* dist/main",
-    "copy-assets:esm5": "copyfiles src/echo/gen/* dist/esm5 && copyfiles src/views/* dist/esm5",
-    "copy-assets:esm": "copyfiles src/echo/gen/* dist/esm && copyfiles src/views/* dist/esm",
+    "copy-assets": "copyfiles src/echo/gen/* dist/main && copyfiles src/views/* dist/main",
     "build-host-proxy": "node scripts/bundle-all.js --standalone proxyHost --inputGlob dist/main/tests/common/TestCrossDomainHost.js --outputFile ./dist/main/tests/web/CrossDomainHost.bundle.js",
     "prepare-native-e2e-debug-tests": "node scripts/bundle-all.js --inputGlob dist/main/tests/native/*Connect*spec.js --outputFile ./dist/main/tests/native/RendererProcess.bundle.js",
     "e2e-web-electron": "node scripts/web-e2e-tests-launcher.js --file ./dist/main/tests/web/RendererProcess.bundle.js",
