--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -11,10 +11,7 @@
     "build": "npm run build:main && npm run build:bundle",
     "build:bundle": "npm run copy-gen-folders && npm run package && npm run build-binary",
     "package": "webpack",
-    "copy-gen-folders": "run-s copy-gen-folders:*",
-    "copy-gen-folders:cjs": "copyfiles src/launcher/gen/* dist/main",
-    "copy-gen-folders:esm5": "copyfiles src/launcher/gen/* dist/esm5",
-    "copy-gen-folders:esm": "copyfiles src/launcher/gen/* dist/esm",
+    "copy-gen-folders": "copyfiles src/launcher/gen/* dist/main",
     "build:main": "tsc",
     "test": "npm run unit",
     "unit": "jest --coverage --passWithNoTests",
