--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,8 @@
     "prebuild-ts": "lerna run prebuild --stream",
     "build-ts": "tsc -b packages",
     "postbuild-ts": "npm run build-ts:esm && npm run build-ts:esm5",
-    "build-ts:esm": "lerna exec --parallel -- tsc --outDir dist/esm --module esnext --target es6 --importHelpers false",
-    "build-ts:esm5": "lerna exec --parallel -- tsc --outDir dist/esm5 --module esnext",
+    "build-ts:esm": "lerna exec --parallel --scope @plexus-interop/{broker,client,client-api,common,common-api-impl,io,metadata,protocol,remote,transport-common,websocket-transport} -- tsc --outDir dist/esm --module esnext --target es6 --importHelpers false",
+    "build-ts:esm5": "lerna exec --parallel --scope @plexus-interop/{broker,client,client-api,common,common-api-impl,io,metadata,protocol,remote,transport-common,websocket-transport} -- tsc --outDir dist/esm5 --module esnext",
     "build-bundles": "lerna run build:bundle --stream",
     "watch": "tsc -b -w packages --preserveWatchOutput",
     "prepublish-all": "node ./scripts/replace-auth-vars.js --publish && lerna exec -- cross-var shx cp $LERNA_ROOT_PATH/.npmrc .npmrc",
@@ -57,7 +57,7 @@
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.0.2",
-    "@types/core-js": "^0.9.43",
+    "@types/core-js": "^2.5.5",
     "@types/fs-extra": "5.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
@@ -68,12 +68,12 @@
     "@types/node": "^14.11.1",
     "@types/rx": "^4.1.1",
     "@types/superagent": "^3.5.6",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "babel-register": "^6.23.0",
     "chai": "^4.1.0",
     "chokidar": "^3.5.3",
-    "copyfiles": "^1.2.0",
+    "copyfiles": "^2.4.1",
     "core-js": "^2.5.3",
     "cross-var": "1.1.0",
     "del-cli": "4.0.1",
@@ -81,13 +81,13 @@
     "electron-log": "^2.2.9",
     "electron-mocha": "^11.0.2",
     "electron-packager": "^15.4.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jsdoc": "^37.9.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "eslint-plugin-jsdoc": "^39.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "espree": "^3.4.3",
     "find-port": "^2.0.1",
@@ -96,7 +96,7 @@
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.0",
     "husky": "^7.0.4",
-    "if-env": "1.0.0",
+    "if-env": "^1.0.4",
     "is-ci": "^3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-reporters": "^2.2.0",
@@ -105,7 +105,7 @@
     "jest-jasmine2": "^27.5.1",
     "jest-preset-angular": "^11.1.0",
     "karma": "^6.3.17",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-ie-launcher": "^1.0.0",
@@ -117,11 +117,11 @@
     "kill-port": "^1.6.1",
     "lerna": "^4.0.0",
     "link-parent-bin": "^2.0.0",
-    "lint-staged": "^12.3.4",
+    "lint-staged": "^12.3.7",
     "minimist": "^1.2.6",
     "mocha": "^9.2.1",
     "mock-socket": "^7.0.0",
-    "npm-run-all": "4.1.1",
+    "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "optimize-plugin": "^1.1.0",
     "path": "^0.12.7",
@@ -129,18 +129,18 @@
     "protobufjs": "6.11.2",
     "protractor": "~7.0.0",
     "prr": "1.0.1",
-    "renamer": "^2.0.0",
+    "renamer": "^2.0.1",
     "rxjs": "^7.5.4",
     "shx": "^0.3.4",
     "sinon": "^2.4.1",
     "strip-bom": "^3.0.0",
     "tree-kill": "^1.1.0",
-    "ts-jest": "^27.1.3",
-    "ts-mockito": "2.0.2",
+    "ts-jest": "^27.1.4",
+    "ts-mockito": "^2.6.1",
     "ts-node": "~3.2.0",
     "tslib": "^2.3.1",
     "typescript": "~4.4.4",
-    "webpack": "^5.68.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
