AAP-21559: improve e2e test sourcemapping

--- a/web/packages/e2e/tsconfig.json
+++ b/web/packages/e2e/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "dist/main",
     "rootDir": ".",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "sourceMap": false,
+    "inlineSourceMap": true,
+    "inlineSources": true
   },
   "references": [
     { "path": "../broker" },
