--- a/web/packages/client/package.json
+++ b/web/packages/client/package.json
@@ -20,7 +20,7 @@
     "build": "npm run build:main",
     "build:main": "tsc",
     "watch": "tsc -w",
-    "test": "jest --coverage --forceExit",
+    "test": "jest --coverage --forceExit --detectOpenHandles",
     "gen-client-js": "pbjs --force-long -t static-module -r client -w commonjs -o src/gen/internal-client-protocol.js ../../../protocol/Plexus.Interop.proto",
     "gen-client-ts": "pbts --force-long -o src/gen/internal-client-protocol.d.ts src/gen/internal-client-protocol.js",
     "gen-client-protocol": "npm run gen-client-js && npm run gen-client-ts"
