AAP-21559: disable lerna verifyAccess as it doesn't support npm publish tokens

--- a/web/lerna.json
+++ b/web/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "npm",
   "version": "0.1.0",
   "command": {
@@ -20,7 +18,8 @@
     },
     "publish": {
       "yes": true,
-      "fromPackage": true
+      "fromPackage": true,
+      "verifyAccess": false
     }
   }
 }
