AAP-21559: prevent inadvertent glob expansion on build commands

--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,8 @@
     "prebuild-ts": "lerna run prebuild --stream",
     "build-ts": "tsc -b packages",
     "postbuild-ts": "npm run build-ts:esm && npm run build-ts:esm5",
-    "build-ts:esm": "lerna exec --parallel --scope @plexus-interop/{broker,client,client-api,common,common-api-impl,io,metadata,protocol,remote,transport-common,websocket-transport} -- tsc --outDir dist/esm --module esnext --target es6 --importHelpers false",
-    "build-ts:esm5": "lerna exec --parallel --scope @plexus-interop/{broker,client,client-api,common,common-api-impl,io,metadata,protocol,remote,transport-common,websocket-transport} -- tsc --outDir dist/esm5 --module esnext",
+    "build-ts:esm": "lerna exec --parallel --scope '@plexus-interop/{broker,client,client-api,common,common-api-impl,io,metadata,protocol,remote,transport-common,websocket-transport}' -- tsc --outDir dist/esm --module esnext --target es6 --importHelpers false",
+    "build-ts:esm5": "lerna exec --parallel --scope '@plexus-interop/{broker,client,client-api,common,common-api-impl,io,metadata,protocol,remote,transport-common,websocket-transport}' -- tsc --outDir dist/esm5 --module esnext",
     "build-bundles": "lerna run build:bundle --stream",
     "watch": "tsc -b -w packages --preserveWatchOutput",
     "prepublish-all": "run-s publish:prepare publish:commit",
