AAP-21559: tidy up deps: migrate to core-js 3, replace find-port with get-port
to close last audit warning

--- a/web/package.json
+++ b/web/package.json
@@ -76,7 +76,7 @@
     "chai": "^4.1.0",
     "chokidar": "^3.5.3",
     "copyfiles": "^2.4.1",
-    "core-js": "^2.5.3",
+    "core-js": "^3.22.4",
     "cross-var": "1.1.0",
     "del-cli": "4.0.1",
     "electron": "^17.1.2",
@@ -92,7 +92,7 @@
     "eslint-plugin-jsdoc": "^39.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "espree": "^3.4.3",
-    "find-port": "^2.0.1",
+    "get-port": "^5.1.1",
     "glob": "^7.2.0",
     "glob-to-regexp": "^0.4.1",
     "html-webpack-plugin": "^5.5.0",
