--- a/web/packages/remote/package.json
+++ b/web/packages/remote/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@plexus-interop/common": "file:../common",
-    "superagent": "3.8.2",
+    "isomorphic-unfetch": "^3.1.0",
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
