--- a/web/package.json
+++ b/web/package.json
@@ -56,6 +56,7 @@
     "@angular/cli": "^13.2.3",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
+    "@electron/remote": "^2.0.8",
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.0.2",
@@ -81,7 +82,7 @@
     "electron": "^17.1.2",
     "electron-log": "^2.2.9",
     "electron-mocha": "^11.0.2",
-    "electron-packager": "^15.4.0",
+    "electron-packager": "^16.0.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -116,7 +117,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-webpack": "^5.0.0",
     "kill-port": "^1.6.1",
-    "lerna": "^4.0.0",
+    "lerna": "^5.4.3",
     "link-parent-bin": "^2.0.0",
     "lint-staged": "^12.3.7",
     "minimist": "^1.2.6",
